--- a/index.html
+++ b/index.html
@@ -105,17 +105,26 @@
             status.innerText = `✅ 캡처 완료: ${msg.data.filename}`;
 			//// img.src = `/${msg.data.filename}?t=${Date.now()}`; //라즈베리파이 내에서 사용하려면 이걸로 다시 변경
             //img.src = `http://192.168.45.111:8001/${msg.data.filename}?t=${Date.now()}`; //프론트 외부용
-            const imageUrl = `http://192.168.45.111:8001/${msg.data.filename}?t=${Date.now()}`;
-            img.src = imageUrl;
-
-            // 👉 자동 저장 처리
-            const link = document.createElement('a');
-            link.href = imageUrl;
-            link.download = `capture_${Date.now()}.jpg`;
-            document.body.appendChild(link);
-            link.click();
-            document.body.removeChild(link);
-            
+            fetch(imageUrl)
+              .then(response => {
+                if (!response.ok) {
+                  throw new Error('이미지 요청 실패');
+                }
+                return response.blob();
+              })
+              .then(blob => {
+                const blobUrl = URL.createObjectURL(blob);
+                const a = document.createElement('a');
+                a.href = blobUrl;
+                a.download = `capture_${Date.now()}.jpg`; // 저장될 파일명
+                document.body.appendChild(a);
+                a.click();
+                document.body.removeChild(a);
+                URL.revokeObjectURL(blobUrl); // 메모리 해제
+              })
+              .catch(err => {
+                status.innerText = `❌ 이미지 저장 실패: ${err.message}`;
+              });
             break;
 
           case 'captureError':
