--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
     <div id="status">Status: Idle</div>
     <img id="capturedImage" alt="Captured Photo" src="" />
     <div class="controls">
-      <button id="manualCleanButton">수동 청소 실행</button>
-      <button id="captureTestButton">수동 캡처 테스트</button>
+      <button id="manualCleanButton">수동 청소 실행2</button>
+      <button id="captureTestButton">수동 캡처 테스트2</button>
     </div>
   </div>
 
